<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="center"
            android:text="@string/_4th_yr_bsit" />

        <CheckBox
            android:id="@+id/bx1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_205" />

        <CheckBox
            android:id="@+id/bx2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ics_115" />

        <CheckBox
            android:id="@+id/bx3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_125" />

        <CheckBox
            android:id="@+id/bx4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_elec2" />

        <CheckBox
            android:id="@+id/bx5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_elec3" />

        <CheckBox
            android:id="@+id/bx6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_elec4" />

        <CheckBox
            android:id="@+id/bx7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_elec2" />

        <CheckBox
            android:id="@+id/bx8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f_elec3" />

        <TextView
            android:id="@+id/textVie1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/comments" />

        <EditText
            android:id="@+id/comment_box"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>